--- a/angular-client/src/app/components/header/header.component.html
+++ b/angular-client/src/app/components/header/header.component.html
@@ -1,3 +1,10 @@
-<p>
-  header works!
-</p>
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <a routerLink="/" mat-button>Home</a>
+
+    <div class="flex-spacer"></div>
+
+    <a routerLink="/login" mat-button>Login</a>
+    <a routerLink="/register" mat-button>Signup</a>
+  </mat-toolbar-row>
+</mat-toolbar>
