--- a/angular-client/src/app/components/home/home.component.html
+++ b/angular-client/src/app/components/home/home.component.html
@@ -1,3 +1,14 @@
-<p>
-  home works!
-</p>
+<div class="jumbotron text-center">
+  <h1>
+    Awesome App
+  </h1>
+  <p class="lead">Welcome to our app</p>
+  <div>
+    <a class="btn btn-primary" [routerLink]="['/login']">
+      Login
+    </a>
+    <a class="btn btn-default" [routerLink]="['/register']">
+      Register
+    </a>
+  </div>
+</div>
