--- a/angular-client/src/app/components/header/header.component.html
+++ b/angular-client/src/app/components/header/header.component.html
@@ -14,12 +14,15 @@
                 <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{ exact:true }">
                     <a [routerLink]="['/']">Home</a>
                 </li>
+                <li *ngIf="authService.isLoggedIn()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{ exact:true }">
+                    <a [routerLink]="['/dashboard']">Dashboard</a>
+                </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{ exact:true }">
+                <li *ngIf="!authService.isLoggedIn()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{ exact:true }">
                     <a [routerLink]="['/login']">Login</a>
                 </li>
-                <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{ exact:true }">
+                <li *ngIf="!authService.isLoggedIn()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{ exact:true }">
                     <a [routerLink]="['/register']">Register</a>
                 </li>
             </ul>
