--- a/angular-client/src/app/components/login/login.component.html
+++ b/angular-client/src/app/components/login/login.component.html
@@ -1,3 +1,19 @@
-<p>
-  login works!
-</p>
+<div class="login">
+  <h2 class="login__title text-center">Login</h2>
+  <form class="login__form" (submit)="onLoginSubmit()" [formGroup]="loginForm">
+      <div class="form-group" [ngClass]="displayFieldCss('email')">
+        <label>Email</label>
+        <input type="text" [(ngModel)]="email" name="email" class="form-control" formControlName="email" autofocus/>
+
+        <app-field-error-display [displayError]="isFieldValid('email')" errorMsg="Please enter valid email"></app-field-error-display>
+      </div>
+      <div class="form-group" [ngClass]="displayFieldCss('password')">
+        <label>Password</label>
+        <input type="text" [(ngModel)]="password" name="password" class="form-control"                            formControlName="password" />
+        <app-field-error-display [displayError]="isFieldValid('password')" errorMsg="Password is              required"></app-field-error-display>
+      </div>
+      <button type="submit" class="btn btn-primary btn-login" [disabled]="!loginForm.valid">
+        Login
+      </button>
+  </form>
+</div>
